# rinha-backend-2024-q1

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
src/: main.rs  types.rs
